freest/test/prog/Valid/Functional/SimpleVar/SimpleVar.fst
module SimpleVar where

id' : Int -> Int
id' x = x

main : ()
main = print (id' 23)
